--- a/php.ini
+++ b/php.ini
@@ -1,4 +1,13 @@
 post_max_size = 20M
 upload_max_filesize = 100M
-xdebug.remote_port = 9000　　
-xdebug.idekey = PHPSTORM
+xdebug.auto_trace=on　　#启用代码自动跟踪
+xdebug.collect_params=on　　#允许收集传递给函数的参数变量
+xdebug.collect_return=on　　#允许收集函数调用的返回值
+xdebug.trace_output_dir="/AppServ/Xdebug"　　#指定堆栈跟踪文件的存放目录
+xdebug.profiler_enable=on　　#是否启用Xdebug的性能分析，并创建性能信息文件
+xdebug.profiler_output_dir="/AppServ/Xdebug"　　#指定性能分析信息文件的输出目录
+xdebug.remote_enable = on　　#是否开启远程调试
+xdebug.remote_handler = dbgp　　#指定远程调试的处理协议
+xdebug.remote_host= localhost　　#指定远程调试的主机名
+xdebug.remote_port = 9000　　#指定远程调试的端口号
+xdebug.idekey = PHPSTORM　　#指定传递给DBGp调试器处理程序的IDE Key
