--- a/php.ini
+++ b/php.ini
@@ -8,9 +8,9 @@ xdebug.profiler_enable=on　　#是否启用Xdebug的性能分析，并创建性
 xdebug.profiler_output_dir="/tmp/"　　#指定性能分析信息文件的输出目录
 xdebug.remote_enable = on　　#是否开启远程调试
 xdebug.remote_handler = dbgp　　#指定远程调试的处理协议
-xdebug.remote_host= 127.0.0.1　　#指定远程调试的主机名
+xdebug.remote_host= 10.0.11.130　　#指定远程调试的主机名
 xdebug.remote_port = 9018　　#指定远程调试的端口号
-xdebug.idekey = PHPSTORM　　#指定传递给DBGp调试器处理程序的IDE Key
+xdebug.idekey = PHP　　#指定传递给DBGp调试器处理程序的IDE Key
 
 # 记录 xdebug与调试器会话 日志
 xdebug.remote_log="/tmp/xdebug.log
