--- a/php.ini
+++ b/php.ini
@@ -16,4 +16,4 @@ xdebug.idekey = PHP　　#指定传递给DBGp调试器处理程序的IDE Key
 
 
 # 记录 xdebug与调试器会话 日志
-xdebug.remote_log="/tmp/xdebug.log
+xdebug.remote_log="/tmp/xdebug.log"
