--- a/php.ini
+++ b/php.ini
@@ -6,7 +6,7 @@ xdebug.collect_return=on　　#允许收集函数调用的返回值
 xdebug.trace_output_dir="/tmp/"　　#指定堆栈跟踪文件的存放目录
 xdebug.profiler_enable=on　　#是否启用Xdebug的性能分析，并创建性能信息文件
 xdebug.profiler_output_dir="/tmp/"　　#指定性能分析信息文件的输出目录
-xdebug.remote_enable = on　　#是否开启远程调试
+xdebug.remote_enable = 1　　#是否开启远程调试
 xdebug.remote_autostart=1
 
 xdebug.remote_handler = dbgp　　#指定远程调试的处理协议
