--- a/php.ini
+++ b/php.ini
@@ -8,6 +8,7 @@ xdebug.profiler_enable=on　　#是否启用Xdebug的性能分析，并创建性
 xdebug.profiler_output_dir="/tmp/"　　#指定性能分析信息文件的输出目录
 xdebug.remote_enable = 1　　#是否开启远程调试
 xdebug.remote_autostart=1
+xdebug.remote_connect_back=1
 
 xdebug.remote_handler = dbgp　　#指定远程调试的处理协议
 xdebug.remote_host= 10.0.11.130　　#指定远程调试的主机名
